# q-loom-agents

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  start-all.bat  tsconfig.json  vite.config.ts
agents/: 00_shared_protocol.md  01_generator_agent.md  02_quality_monitor_agent.md  03_acceptance_agent.md  04_supervisor_agent.md
backend/app/: __init__.py  graph.py  main.py
backend/app/agents/: llm.py  prompt_loader.py
backend/app/core/: config.py
backend/app/schemas/: review.py  run.py
backend/app/services/: duplicate_detector.py  review_store.py
docs/: architecture.md  step-by-step-log.md
examples/: sample_record.readable.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AgentConsole.tsx  ReviewDesk.tsx  ThreeConsole.ts  ThreeWorkshop.ts  WorkshopConsole.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: global.css
schemas/: sample_schema.json
scripts/: start-all.ps1  stop-all.ps1
versions/v0.1.0/: CHANGELOG.md
versions/v0.2.0/: CHANGELOG.md  INSTALL_PUA_F_DRIVE.md
versions/v0.3.0/: CHANGELOG.md
versions/v0.4.0/: CHANGELOG.md
versions/v0.5.0/: CHANGELOG.md
versions/v0.6.0/: CHANGELOG.md
versions/v0.6.1/: CHANGELOG.md
versions/v0.7.0/: CHANGELOG.md
versions/v0.7.1/: CHANGELOG.md
versions/v0.7.2/: CHANGELOG.md
versions/v0.7.3/: CHANGELOG.md
versions/v0.7.4/: CHANGELOG.md
workflow/: closed_loop.md
