[project]
name = "q-loom-agents"
version = "0.7.0"
description = "LangChain and LangGraph multi-agent pipeline with a Q-style 3D operations console."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Jiacheng Ni" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "langchain-deepseek>=0.1.0",
  "langchain-anthropic>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["agents*", "docs*", "examples*", "frontend*", "schemas*", "versions*", "workflow*"]
